--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="left-div left-des">
 				<div class="left-des-item"><svg t="1705773709627" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1478"><path d="M512 249.976471c-99.388235 0-180.705882 81.317647-180.705882 180.705882s81.317647 180.705882 180.705882 180.705882 180.705882-81.317647 180.705882-180.705882-81.317647-180.705882-180.705882-180.705882z m0 301.17647c-66.258824 0-120.470588-54.211765-120.470588-120.470588s54.211765-120.470588 120.470588-120.470588 120.470588 54.211765 120.470588 120.470588-54.211765 120.470588-120.470588 120.470588z" p-id="1479"></path><path d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z" p-id="1480"></path></svg>Beijing/Princeton
 				</div>
-				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>Princeton International School of Math and Science 27'</div>
+				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>PRISMS 27'</div>
 			</div>
 			<div class="left-div left-tag">
 				<div class="left-tag-item">Math competition&Research
@@ -97,9 +97,9 @@
 					<span class="gradientText">
 						Hi.</span>
 				</div>
-				<div class="description">👦 <span class="purpleText">Full Stack</span> Developer
+				<div class="description"> This is Ziyi <span class="purpleText">Kaya</span> YANG
 				</div>
-				<div class="description">📝 The only way to do <span class="purpleText textBackground">great</span> is
+				<div class="description">The only way to do <span class="purpleText textBackground">great</span> is
 					to <span class="purpleText textBackground">love</span> what you do. </div>
 
 				<div class="iconContainer">
@@ -151,8 +151,8 @@
                     </svg>site </div>
 				<div class="projectList"><a class="projectItem a" target="_blank" href="https://blog.zyyo.net">
 						<div class="projectItemLeft">
-							<h1>博客</h1>
-							<p>记录摆烂日常</p>
+							<h1>Academic Blog</h1>
+							<p>Math/Linguistic/Physics</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i1.png" alt="">
@@ -160,8 +160,8 @@
 
 					</a><a class="projectItem a" target="_blank" href="https://i.zyyo.cc">
 						<div class="projectItemLeft">
-							<h1>云盘</h1>
-							<p>存储收集文件</p>
+							<h1>Projects</h1>
+							<p>N/A</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i2.png" alt="">
@@ -170,8 +170,8 @@
 					</a>
 					<a class="projectItem a" target="_blank" href="https://zyyo.cc">
 						<div class="projectItemLeft">
-							<h1>实验室</h1>
-							<p>收集有趣html作品</p>
+							<h1>Experiences</h1>
+							<p>:)</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i4.png" alt="">
@@ -179,8 +179,8 @@
 
 					</a><a class="projectItem a" target="_blank" href="https://zyyo.cc">
 						<div class="projectItemLeft">
-							<h1>实验室</h1>
-							<p>收集有趣html作品</p>
+							<h1>Art Archieve</h1>
+							<p>:)</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i4.png" alt="">
@@ -244,9 +244,9 @@
 		</div>
 	</div>
 	<footer>
-		Zyyo © 2024 |
+		2025
 		<a href="https://beian.miit.gov.cn/">
-			豫ICP备2023015852号-1 </a>
+			/ </a>
 	</footer>
 	<div class="tc">
 		<div onclick="" class="tc-main">
